--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,19 @@
 <%- include("partials/header") -%>
+
     <h1>Compose</h1>
     <form action="/compose" method="post">
-        <input type="text" name="publish" id="publish">
+        <div class="form-group">
+            <label for="post-title">Post Title</label>
+            <input type="text" class="form-control" id="post-title" name="postTitle" placeholder="Title">
+        </div>
+
+        <div class="form-group">
+            <label for="post-content">Example textarea</label>
+            <textarea class="form-control" id="post-content" rows="6" name="postContent" placeholder="Content"></textarea>
+        </div>
+
         <button type="submit">Publish</button>
+
     </form>
+
 <%- include("partials/footer") -%>
