--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -12,7 +12,7 @@
             <textarea class="form-control" id="post-content" rows="6" name="postContent" placeholder="Content"></textarea>
         </div>
 
-        <button type="submit">Publish</button>
+        <button class="btn btn-primary btn-lg btn-outline-primary" type="submit">Publish</button>
 
     </form>
 
