--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
-
-</div>
-  <div class="footer">
-    <p>Created and developed by Pankaj Singh</p>
   </div>
-</div>
+    <div class="footer-padding"></div>
+    <div class="footer">
+      <p>Created and developed by Pankaj Singh</p>
+    </div>
 </body>
+
 </html>
