--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,6 @@
     <% content.forEach((element) => { %>
         <% let truncatePostContent = element.description.substring(0, 100) + "..."; %>
         <h1> <%= element.title %> </h1>
-        <p> <%= truncatePostContent %> <a href="posts/<%= element.title %>"> Read More</a></p>
+        <p> <%= truncatePostContent %> <a href="posts/<%= element._id %>"> Read More</a></p>
         <% }) %>
 <%- include("partials/footer"); -%>
